# battle-python

./: .gitignore  Procfile  README.md  pyproject.toml
battle_snake/: __main__.py  entities.py  interactor.py  logic.py
docs/: classes.puml  packages.puml  sample_move_request.json  sequence.puml
snake_profile/: profile.bat  snake_profile.py
src/: logic.py
tests/: almost_empty_board_request.json  board_fixtures.py  board_test.py  conftest.py  entities_test.py  fixtures_board.py  fixtures_move_decisions.py  fixtures_snakes.py  integration_test.py  intg_avoid_my_body_test.py  intg_avoid_my_neck_test.py  intg_avoid_to_bite_myself_test.py  intg_avoid_walls_test.py  intg_exclude_impossible_steps_test.py  intg_move_decision_test.py  intg_take_chances_test.py  logic_test.py  prepared_test.py  sample_request.xlsx  snake_fixtures.py  solo_board_1.json  solo_board_1.xlsx  solo_board_2.json  solo_board_2.xlsx  solo_board_3.json  solo_board_3.xlsx  solo_board_4.json  solo_board_4.xlsx  test_request.json  test_request.xlsx  test_request_move_me_1.json  test_request_move_me_1.xlsx  test_request_move_me_2.json  test_request_move_me_2.xlsx  test_request_move_me_3.json  test_request_move_me_3.xlsx  test_request_move_me_4.json  test_request_move_me_4.xlsx  unit_future_board_test.py  unit_future_snake_test.py  (+4 more)
