[tool.poetry]
name = "battle-snake"
version = "1.0.0"
description = "A simple Battlesnake written in Python"
authors = ["Volker Prior <volker.prior@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.3"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pytest-repeat = "^0.9.1"
pytest-cov = "^3.0.0"
